# material-color-utilities

./: CMakeLists.txt
cpp/cam/: hct_solver.cc  viewing_conditions.h
cpp/utils/: utils.cc  utils.h
